...
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import kotlinx.coroutines.delay
import kotlinx.coroutines.launch
import org.smartregister.fhircore.engine.R

const val PIN_VIEW = "pin_view"
const val PIN_VIEW_INPUT_TEXT_FIELD = "pin_view_input_text_field"
const val PIN_VIEW_CELL = "pin_view_cell"
const val PIN_VIEW_CELL_DOTTED = "pin_view_cell_dotted"
const val PIN_VIEW_CELL_TEXT = "pin_view_cell_text"
const val PIN_VIEW_ERROR = "pin_view_error"

...
